service.yml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  type: NodePort
  selector:
    app: prod
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
